--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>common</module>
         <module>server</module>
+        <module>gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -88,17 +89,17 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.21</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>1.1.1</version>
+                <version>1.3.1</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>1.4.7.RELEASE</version>
             </dependency>
-
             <!--分页插件 -->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
@@ -175,11 +176,6 @@
                 <artifactId>jsch</artifactId>
                 <version>0.1.50</version>
             </dependency>
-            <!--<dependency>-->
-                <!--<groupId>commons-io</groupId>-->
-                <!--<artifactId>commons-io</artifactId>-->
-                <!--<version>2.5</version>-->
-            <!--</dependency>-->
             <dependency>
                 <groupId>cn.jpush.api</groupId>
                 <artifactId>jpush-client</artifactId>
@@ -197,10 +193,6 @@
                 <version>1.7.25</version>
             </dependency>
             <!--<dependency>-->
-                <!--<groupId>org.apache.poi</groupId>-->
-                <!--<artifactId>poi</artifactId>-->
-                <!--<version>3.10-FINAL</version>-->
-            <!--</dependency>-->
             <!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
             <dependency>
                 <groupId>com.github.ulisesbocchio</groupId>
